@@ -57,11 +57,12 @@ public class TaskLog {
 				taskProperties[i] = new TaskProperty(tp[i]);
 		}
 		startTime = System.currentTimeMillis();
-		endTime = startTime;
+		endTime = 0;
 	}
 
 	protected void end() {
 		endTime = System.currentTimeMillis();
+		endDate = null;
 		duration = endTime - startTime;
 	}
 
@@ -80,7 +81,7 @@ public class TaskLog {
 	}
 
 	public Date getEndDate() {
-		if (endDate == null)
+		if (endDate == null && endTime != 0)
 			endDate = new Date(endTime);
 		return endDate;
 	}
