@@ -1,0 +1,91 @@
+/**   
+ * License Agreement for OpenSearchServer
+ *
+ * Copyright (C) 2011 Emmanuel Keller / Jaeksoft
+ * 
+ * http://www.open-search-server.com
+ * 
+ * This file is part of OpenSearchServer.
+ *
+ * OpenSearchServer is free software: you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ * OpenSearchServer is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with OpenSearchServer. 
+ *  If not, see <http://www.gnu.org/licenses/>.
+ **/
+
+package com.jaeksoft.searchlib.scheduler.task;
+
+import java.io.IOException;
+import java.net.URISyntaxException;
+
+import org.apache.lucene.queryParser.ParseException;
+
+import com.jaeksoft.searchlib.Client;
+import com.jaeksoft.searchlib.SearchLibException;
+import com.jaeksoft.searchlib.config.Config;
+import com.jaeksoft.searchlib.function.expression.SyntaxError;
+import com.jaeksoft.searchlib.request.SearchRequest;
+import com.jaeksoft.searchlib.scheduler.TaskAbstract;
+import com.jaeksoft.searchlib.scheduler.TaskProperties;
+import com.jaeksoft.searchlib.scheduler.TaskPropertyDef;
+import com.jaeksoft.searchlib.scheduler.TaskPropertyType;
+
+public class TaskDeleteQuery extends TaskAbstract {
+
+	final private TaskPropertyDef propQuery = new TaskPropertyDef(
+			TaskPropertyType.textBox, "Query", 200);
+
+	final private TaskPropertyDef[] taskPropertyDefs = { propQuery };
+
+	@Override
+	public String getName() {
+		return "Delete query";
+	}
+
+	@Override
+	public TaskPropertyDef[] getPropertyList() {
+		return taskPropertyDefs;
+	}
+
+	@Override
+	public String[] getPropertyValues(Config config, String property)
+			throws SearchLibException {
+		return null;
+	}
+
+	@Override
+	public void execute(Client client, TaskProperties properties)
+			throws SearchLibException {
+		String query = properties.getValue(propQuery.name);
+		try {
+			SearchRequest request = client.getNewSearchRequest();
+			request.setQueryString(query);
+			client.deleteDocuments(request);
+		} catch (IOException e) {
+			throw new SearchLibException(e);
+		} catch (URISyntaxException e) {
+			throw new SearchLibException(e);
+		} catch (InstantiationException e) {
+			throw new SearchLibException(e);
+		} catch (IllegalAccessException e) {
+			throw new SearchLibException(e);
+		} catch (ClassNotFoundException e) {
+			throw new SearchLibException(e);
+		} catch (ParseException e) {
+			throw new SearchLibException(e);
+		} catch (SyntaxError e) {
+			throw new SearchLibException(e);
+		} catch (InterruptedException e) {
+			throw new SearchLibException(e);
+		}
+	}
+}
